<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000"
    tools:context=".Registrar"
    android:layout_gravity="center">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/RegistrarTXT"
            android:gravity="center"
            android:textColor="#fff"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/registro"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nombre"
            android:textStyle="italic"
            android:inputType="textPersonName"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/apellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Apellido"
            android:textStyle="italic"
            android:inputType="textPersonName"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/edad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Edad"
            android:textStyle="italic"
            android:inputType="date"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Correo"
            android:textStyle="italic"
            android:inputType="textEmailAddress"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Contraseña"
            android:textStyle="italic"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/Aceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Aceptar"
            android:layout_marginTop="10dp"
            android:textStyle="italic"/>




    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>